--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
 <body>
 
 </body>
+<script type="text/javascript" src="js/question.json.js"></script>
+<script type="text/javascript" src="js/question.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </html>
