--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Вопросы - Луценко Вячеслав</title>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/all.css">
+  <link rel="stylesheet" href="css/question.css">
 </head>
 <body>
 
