--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <link rel="stylesheet" href="css/question.css">
 </head>
 <body>
-
+  <div class="question-block"></div>
+  <input class="create-question" type="button" value="Создать вопрос">
+  <script type="text/javascript" src="js/function.js"></script>
+  <script type="text/javascript" src="js/question.json.js"></script>
+  <script type="text/javascript" src="js/question.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
-<script type="text/javascript" src="js/question.json.js"></script>
-<script type="text/javascript" src="js/question.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
 </html>
