--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <title>Вопросы - Луценко Вячеслав</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/all.css">
   <link rel="stylesheet" href="css/question.css">
 </head>
 <body>
-  <div class="question-block"></div>
+  <div class="question-block">
+    <div class="question-text"></div>
+    <div class="question-answers"></div>
+    <input type="button" value="Ответить" class="question-button">
+    <div class="left-button"></div>
+    <div class="right-button"></div>
+  </div>
   <input class="create-question" type="button" value="Создать вопрос">
   <script type="text/javascript" src="js/function.js"></script>
   <script type="text/javascript" src="js/question.json.js"></script>
