--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     <div class="question-text"></div>
     <div class="question-answers"></div>
     <input type="button" value="Ответить" class="question-button">
-    <div class="left-button"></div>
-    <div class="right-button"></div>
+    <div class="left-button disabled"></div>
+    <div class="right-button disabled"></div>
   </div>
   <input class="create-question" type="button" value="Создать вопрос">
   <script type="text/javascript" src="js/function.js"></script>
   <script type="text/javascript" src="js/question.json.js"></script>
   <script type="text/javascript" src="js/question.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
