--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="left-button disabled"></div>
     <div class="right-button disabled"></div>
   </div>
-  <input class="create-question" type="button" value="Создать вопрос">
+  <!-- <input class="create-question" type="button" value="Создать вопрос"> -->
   <script type="text/javascript" src="js/function.js"></script>
   <script type="text/javascript" src="js/question.json.js"></script>
   <script type="text/javascript" src="js/question.js"></script>
