--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Вопросы - Луценко Вячеслав</title>
-  <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'> -->
   <link rel="stylesheet" href="css/question.css">
 </head>
 <body>
+  <div class="button-main-quetions">Основные вопросы</div>
   <div class="question-block">
     <div class="question-text"></div>
     <div class="question-answers"></div>
